--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+#flat files from data import
+*.csv 
+
 # C extensions
 *.so
+
 
 # Distribution / packaging
 .Python
